--- a/CSS/main.css
+++ b/CSS/main.css
@@ -321,3 +321,302 @@ form
                 }
     }
 
+label
+{
+    color: #ffffff;
+    font-weight: bold;
+    line-height: 1.5;
+    margin: 0 0 0.7em 0;
+    display: block;
+    font-size: 1.1em;
+}
+
+input[type="text"], input[type="password"], input[type="email"], input[type="tel"], select, textarea
+{
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    -ms-appearance: none;
+    appearance: none;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 0.25em;
+    border: none;
+    border: 1px rgba(255, 255, 255, 0.15) solid;
+    color: inherit;
+    display: block;
+    outline: 0;
+    padding: 0 1em;
+    text-decoration: none;
+    width: 100%;
+}
+
+    input[type="text"]:invalid,
+    input[type="password"]:invalid,
+    input[type="email"]:invalid,
+    input[type="tel"]:invalid,
+    select:invalid, textarea:invalid
+    {
+        box-shadow: none;
+    }
+
+    input[type="text"]:focus,
+    input[type="password"]:focus,
+    input[type="email"]:focus,
+    input[type="tel"]:focus,
+    select:focus, textarea:focus
+    {
+        box-shadow: none;
+    }
+
+select
+{
+    background-image: url("images/pic01");
+    background-size: 1.25;
+    background-repeat: no-repeat;
+    background-position: calc(100% - 1rem) center;
+    height: 2.75em;
+    padding-right: 2.75;
+    text-overflow: ellipsis;
+}
+
+    select option
+    {
+        color: #ffffff;
+        background: #312450;
+    }
+
+    select:focus::-ms-value
+    {
+        background-color: transparent;
+    }
+
+    select::focus::-ms-value
+    {
+        display: none;
+    }
+
+input[type="text"],
+input[type="password"],
+input[type="email"],
+select
+{
+    height: 2.75em;
+}
+
+textarea
+{
+    padding: 0.75em 1em;
+}
+    body.is-ie textarea
+    {
+        min-height: 10em;
+    }
+
+::-webkit-input-placeholder
+{
+    color: rgba(255, 255, 255, 0.35) !important;
+    opacity: 1.0;
+}
+
+:-moz-placeholder
+{
+    color: rgba(255, 255, 255, 0.35) !important;
+    opacity: 1.0;
+}
+
+::-moz-placeholder
+{
+    color: rgba(255, 255, 255, 0.35) !important;
+    opacity: 1.0;
+}
+
+::-ms-input-placeholder
+{
+    color: rgba(255, 255, 255, 0.35) !important;
+    opacity: 1.0;
+}
+
+/* Image */
+
+    .image
+    {
+        border-radius: 0.25;
+        border: 0;
+        display: inline-block;
+        position: relative;
+    }
+
+        .image img
+        {
+            border-radius: 0.25;
+            display: block;
+        }
+
+        .image.left, .image.right
+        {
+            max-width: 100%;
+        }
+
+            .image.left img, .image.right img
+            {
+                width: 100%;
+            }
+
+        .image.left
+        {
+            float: left;
+            margin: 0 1.5em 1em 0;
+            top: 0.25em;
+        }
+
+        .image.right
+        {
+            float: left;
+            margin: 0 1.5em 1em 0;
+            top: 0.25em;
+        }
+
+        .image.fit
+        {
+            display: block;
+            margin: 0 0 2em 0;
+            width: 100%;
+        }
+
+            .image.fit img
+            {
+                width: 100%;
+            }
+
+        .image.main
+        {
+            display: block;
+            margin: 0 0 3em 0;
+            width: 100%;
+        }
+
+            .image.main img
+            {
+                width: 100%;
+            }
+
+
+/* action */
+
+ul.actions
+{
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    cursor: default;
+    list-style: none;
+    margin-left: -1em;
+    padding: 0;
+}
+
+    ul.actions li
+    {
+        padding: 0 0 0 1em;
+        vertical-align: middle;
+    }
+
+    ul.actions.special
+    {
+        -moz-justify-content: center;
+        -webkit-justify-content: center;
+        -ms-justify-content: center;
+        justify-content: center;
+        width: 100%;
+        margin-left: 0;
+    }
+
+        ul.actions.special li:first-child
+        {
+            padding-left: 0;
+        }
+    
+    ul.actions.stacked
+    {
+        -moz-flex-direction: column;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        margin-left: 0;
+    }
+
+        ul.actions.stacked li
+        {
+            padding: 1.3em 0 0 0;
+        }
+
+            ul.actions.stacked li:first-child
+            {
+                padding-top: 0;
+            }
+        
+    ul.actions.fit
+    {
+        width: calc(100% + 1em);
+    }
+
+        ul.actions.fit li
+        {
+            -moz-flex-grow: 1;
+            -webkit-flex-grow: 1;
+            -ms-flex-grow: 1;
+            flex-grow: 1;
+            -moz-flex-shrink: 1;
+            -webkit-flex-shrink: 1;
+            -ms-flex-shrink: 1;
+            flex-shrink: 1;
+            width: 100%;
+        }
+
+            ul.actions.fit li > *
+            {
+                width: 100%;
+            }
+        
+        ul.actions.fit.stacked
+        {
+            width: 100%;
+        }
+
+
+/* Menu */
+
+ul.menu
+{
+    list-style: none;
+    padding: 0;
+}
+
+    ul.menu > li 
+    {
+        border-left: 1px rgba(255, 255, 255, 0.15);
+        display: inline-block;
+        line-height: 1;
+        margin-left: 1.5em;
+        padding: 0 0 0 1.5em;
+    }
+
+        ul.menu > li:first-child
+        {
+            border-left: 0;
+            margin: 0;
+            padding-left: 0;
+        }
+
+    @media screen and (max-width: 480px)
+    {
+        ul.menu > li 
+        {
+            border-left: 0;
+            display: block;
+            line-height: inherit;
+            margin: 0.5em 0 0 0;
+            padding-left: 0;
+        }    
+    }
+
+
