--- a/CSS/main.css
+++ b/CSS/main.css
@@ -369,7 +369,7 @@ input[type="text"], input[type="password"], input[type="email"], input[type="tel
 
 select
 {
-    background-image: url("images/pic01");
+    background-image: url("");
     background-size: 1.25;
     background-repeat: no-repeat;
     background-position: calc(100% - 1rem) center;
@@ -619,4 +619,181 @@ ul.menu
         }    
     }
 
+
+/* section */
+
+section
+{
+    text-align: center;
+}
+
+    header p
+    {
+        color: rgba(255, 255, 255, 0.35);
+        position: relative;
+        margin: 0 0 1.5em 0;
+    }
+
+    header h2 +p
+    {
+        font-size: 1.25;
+        margin-top: -1em;
+        line-height: 1.5em;
+    }
+
+    header h3 + span
+    {
+        font-size: 1.1em;
+        margin-top: -0.8em;
+        line-height: 1.5em;
+    }
+
+/* split */
+
+.split
+{
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+}
+
+    .split > *
+    {
+        width: calc(50% - 2.5em);
+    }
+
+    .split > :nth-child(2n - 1)
+    {
+        padding-right: 2.5em;
+        border-right: 1px rgba(255, 255, 255, 0.15);
+    }
+
+    .split > :nth-child(2n)
+    {
+        padding-left: 2.5em;
+    }
+
+    .split.style1 > :nth-child(2n - 1)
+    {
+        width: calc(66% - 2.5em);
+    }
+
+    .split.style1 > :nth-child(2n)
+    {
+        width: calc(33% - 2.5em);
+    }
+
+/* spotlights */
+
+    .spotlights > section
+    {
+        display: -moz-flex;
+        display: -webkit-felx;
+        display: -ms-flex;
+        display: flex;
+        -moz-flex-direction: row;
+        -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        min-height: 22.5em;
+    }
+
+        body.is-ie .spotlights > section
+        {
+            min-height: 0;
+        }
+
+            .spotlights > section > .image
+            {
+                background-position: center center;
+                background-size: cover;
+                border-radius: 0;
+                display: block;
+                position: relative;
+                width: 25em;
+            }
+
+                .spotlights > section > .image img
+                {
+                    border-radius: 0;
+                    display: block;
+                }
+
+                .spotlights > section > .image:before
+                {
+                    -moz-transition: opacity 1s ease;
+                    -webkit-transition: opacity 1s ease;
+                    -ms-transition: opacity 1s ease;
+                    transition: opacity 1s ease;
+                    background: rgba(49, 36, 80, 0.9);
+                    content: '';
+                    display: block;
+                    height: 100%;
+                    left: 0;
+                    opacity: 0;
+                    position: absolute;
+                    top: 0;
+                    width: 100%;
+                }
+
+            .spotlights > section > .content
+            {
+                padding: 4em 5em 2em 5em;
+                display: -moz-flex;
+                display: -webkit-flex;
+                display: -ms-flex;
+                display: flex;
+                -moz-flex-direction: column;
+                -webkit-flex-direction: column;
+                -ms-flex-direction: column;
+                flex-direction: column;
+                -moz-justify-content: center;
+                -webkit-justify-content: center;
+                -ms-justify-content: center;
+                justify-content: center;
+                width: 50em;
+                -ms-flex: 1;
+            }
+
+                .spotlights > section > .content > .image
+                {
+                    -moz-transform: translateX(0) translateY(0);
+                    -webkit-transform: translateX(0) translateY(0);
+                    -ms-transform: translateX(0) translateY(0);
+                    transform: translateX(0) translateY(0);
+                    -moz-transition: opacity 1s ease, -moz-transform 1s ease;
+                    -webkit-transition: opacity 1s ease, -moz-transform 1s ease;
+                    -ms-transition: opacity 1s ease, -moz-transform 1s ease;
+                    transition: opacity 1s ease, -moz-transform 1s ease;
+                    opacity: 1;
+                }
+
+            .spotlights > section:nth-child(2)
+            {
+                background-color: rgba(0, 0, 0, 0.5);
+            }
+
+            .spotlights > section:nth-child(3)
+            {
+                background-color: rgba(0, 0, 0, 0.1);
+            }
+
+            .spotlights > section.inactive > .image:before,
+            body.is-preload .spotlights > section > .image:before
+            {
+                opacity: 1;
+            }
+
+            .spotlights > section.inactive > .content > .inner,
+            body.is-preload .spotlights > section > .content > .inner
+            {
+                -moz-transform: translateX(-1em);
+                -webkit-transform: translateX(-1em);
+                -ms-transform: translateX(-1em);
+                transform: translateX(-1em);
+                opacity: 0;
+            }
+
+/* table */
 
