--- a/CSS/main.css
+++ b/CSS/main.css
@@ -67,14 +67,6 @@ input, select, textarea
     width: device-with;
 }
 
-@media screen and (max-witdh: 480px) 
-{
-    html, body
-    {
-        min-width: 320px;
-    }
-}
-
 html
 {
     box-sizing: border-box;
@@ -106,30 +98,6 @@ body, input, select, textarea
     font-size: 16.5pt;
     font-weight: normal;
     line-height: 1.75;
-}
-
-@media screen and (max-width: 1680px) 
-{
-    body, input, select, textarea
-    {
-        font-size: 13pt;
-    }
-}
-
-@media screen and (max-width: 1280px) 
-{
-    body, input, select, textarea
-    {
-        font-size: 12pt;
-    }
-}
-
-@media screen and (max-width: 360px) 
-{
-    body, input, select, textarea
-    {
-        font-size: 11pt;
-    }
 }
 
 a:hover
@@ -204,24 +172,6 @@ h3
     font-size: 1.1em;
 }
 
-@media screen and (max-width: 736px)
-{
-    h1
-    {
-        font-size: 2em;
-    }
-
-    h2
-    {
-        font-size: 1.25em;
-    }
-
-    h3
-    {
-        font-size: 1em;
-    }
-}
-
 sub
 {
     font-size: 0.8em;
@@ -291,35 +241,6 @@ form
                 width: calc(25% + 0.375em);
             }
     
-    @media screen and (max-width: 480px)
-    {
-        form > .fields
-        {
-            width: calc(100% + 3em);
-            margin: -1.5em 0 2em -1.5em;
-        }
-
-            form > .fields > .field
-            {
-                width: calc(100% - 1.5em);
-                padding: 1.5em 0 0 1.5em;
-            }
-
-                form > .fields > .field.half
-                {
-                    width: calc(100% - 1.5em);
-                }
-
-                form > .fields > .field.third
-                {
-                    width: calc(100% - 1.5em);
-                }
-
-                form > .fields > .field.quater
-                {
-                    width: calc(100% - 1.5em);
-                }
-    }
 
 label
 {
@@ -607,19 +528,6 @@ ul.menu
             padding-left: 0;
         }
 
-    @media screen and (max-width: 480px)
-    {
-        ul.menu > li 
-        {
-            border-left: 0;
-            display: block;
-            line-height: inherit;
-            margin: 0.5em 0 0 0;
-            padding-left: 0;
-        }    
-    }
-
-
 /* section */
 
 section
@@ -753,7 +661,7 @@ section
                 -ms-justify-content: center;
                 justify-content: center;
                 width: 50em;
-                -ms-flex: 1;
+                /*-ms-flex: 1;*/
             }
 
                 .spotlights > section > .content > .image
@@ -771,12 +679,12 @@ section
 
             .spotlights > section:nth-child(2)
             {
-                background-color: rgba(0, 0, 0, 0.5);
+                background-color: rgba(0, 0, 0, 0.1);
             }
 
             .spotlights > section:nth-child(3)
             {
-                background-color: rgba(0, 0, 0, 0.1);
+                background-color: rgba(0, 0, 0, 0.5);
             }
 
             .spotlights > section.inactive > .image:before,
@@ -795,5 +703,235 @@ section
                 opacity: 0;
             }
 
-/* table */
+/* wrapper */
+
+    .wrapper
+    {
+        position: relative;
+    }
+
+        .wrapper > .inner
+        {
+            padding: 5em 5em 3em 5em;
+            max-width: 100%;
+            width: 75em;
+        }
+
+        .wrapper.alt
+        {
+            background-color: #261c3e;
+        }
+
+        .wrapper.style1
+        {
+            background-color: #5e42a6;
+        }
+
+        .wrapper.style1-alt
+        {
+            background-color: #493382;
+        }
+
+        .wrapper.style2
+        {
+            background-color: #5052b5;
+        }
+
+        .wrapper.style2-alt
+        {
+            background-color: #3e4094;
+        }
+
+        .wrapper-style3
+        {
+            background-color: #b74e91;
+        }
+
+        .wrapper-style3-alt
+        {
+            background-color: #953d75;
+        }
+
+        .wrapper.fullscreen
+        {
+            display: -moz-flex;
+            display: -webkit-flex;
+            display: -ms-flex;
+            display: flex;
+            -moz-flex-direction: column;
+            -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+            flex-direction: column;
+            -moz-justify-content: center;
+            -webkit-justify-content: center;
+            -ms-justify-content: center;
+            justify-content: center;
+            min-height: 100vh;
+        }
+
+            body.is-ie .wrapper.fullscreen
+            {
+                height: 100vh;
+            }
+
+        .wrapper.fade-up > .inner
+        {
+            -moz-transform: translateY(0);
+            -webkit-transform: translateY(0);
+            -ms-transform: translateY(0);
+            transform: translateY(0);
+            -moz-transition: opacity 1s ease, -moz-transformation 1s ease;
+            -webkit-transition: opacity 1s ease, -webkit-transformation 1s ease;
+            -ms-transition: opacity 1s ease, -ms-transformation 1s ease;
+            transition: opacity 1s ease, transformation 1s ease;
+            opacity: 1.0;
+        }
+
+        .wrapper.fade-up.inactive > .inner,
+        body.is-preload .wrapper.fade-up > .inner
+        {
+            opacity: 0;
+            -moz-transform: translateY(1em);
+            -webkit-transform: translateY(1em);
+            -ms-transform: translateY(1em);
+            transform: translateY(1em);
+        }
+
+        .wrapper.fade-down > .inner
+        {
+            -moz-transform: translateY(0);
+            -webkit-transform: translateY(0);
+            -ms-transform: translateY(0);
+            transform: translateY(0);
+            -moz-transition: opacity 1s ease, -moz-transform 1s ease;
+            -webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
+            -ms-transition: opacity 1s ease, -ms-transform 1s ease;
+            transition: opacity 1s ease, tranform 1s ease;
+            opacity: 1.0;
+        }
+
+        .wrapper.fade-down.inactive > .inner,
+        body.is-preload .wrapper.fade-down > .inner
+        {
+            opacity: 0;
+            -moz-transform: translateY(-1em);
+            -webkit-transform: translateY(-1em);
+            -ms-transform: translateY(-1em);
+            transform: translateY(-1em);
+        }
+
+        .wrapper.fade > .inner
+        {
+            -moz-transition: opacity 1s ease;
+            -webkit-transition: opacity 1s ease;
+            -ms-transition: opacity 1s ease;
+            transition: opacity 1s ease;
+            opacity: 1.0;
+        }
+
+        .wrapper.fade.inactive > .inner,
+        body.is-preload .wrapper.fade > .inner
+        {
+            opacity: 0;
+        }
+
+/* header */
+
+    #header
+    {
+        display: -moz-flex;
+        display: -webkit-flex;
+        display: -ms-flex;
+        display: flex;
+        background-color: #5e42a6;
+        cursor: default;
+        padding: 1.75em 2em;
+    }
+
+    #header > .title
+    {
+        border: 0;
+        color: #ffffff;
+        display: block;
+        font-size: 1.25em;
+        font-weight: bold;
+    }
+
+    #header > nav
+    {
+        -moz-flex: 1;
+        -webkit-flex: 1;
+        -ms-flex: 1;
+        flex: 1;
+        text-align: right;
+    }
+
+        #header > nav > ul
+        {
+            margin: 0;
+            padding: 0;
+        }
+
+            #header > nav > ul > li a
+            {
+                border: 0;
+                color: rgba(255, 255, 255, 0.35);
+                display: inline-block;
+                font-size: 0.6em;
+                font-weight: bold;
+                letter-spacing: 0.25em;
+                text-transform: uppercase;
+            }
+
+                #header > nav > ul > li a:hover
+                {
+                    color: rgba(255, 255, 255, 0.35);
+                }
+
+                #header > nav > ul > li a.active
+                {
+                    color: #ffffff;
+                }
+
+/* wrapper (main) */
+
+    #sidebar + #wrapper
+    {
+        margin-left: 18em;
+    }
+
+    #header + #wrapper > .wrapper > .inner
+    {
+        margin: 0 auto;
+    }
+
+/* footer */
+
+    #sidebar + #wrapper + #footer
+    {
+        margin-left: 18em;
+    }
+
+    #footer > .inner a
+    {
+        border-bottom-color: rgba(255, 255, 255, 0.15);
+    }
+
+        #footer > .inner a:hover
+        {
+            border-bottom-color: transparent;
+        }
+    
+    #footer > .inner .menu
+    {
+        font-size: 0.8em;
+        color: rgba(255, 255, 255, 0.15);
+    }
+
+    #header + #wrapper + #footer > .inner
+    {
+        margin: 0 auto;
+    }
+
+/* Sidebar */
 
