--- a/CSS/main.css
+++ b/CSS/main.css
@@ -72,12 +72,12 @@ html
     box-sizing: border-box;
 }
 
-*, *::before, *::after
+*, *:before, *:after
 {
     box-sizing: inherit;
 }
 
-body.is-preload *, body.is-preload *::before, body.is-preload *::after
+body.is-preload *, body.is-preload *:before, body.is-preload *:after
 {
     -moz-animation: none !important;
     -webkit-animation: none !important;
@@ -98,6 +98,16 @@ body, input, select, textarea
     font-size: 16.5pt;
     font-weight: normal;
     line-height: 1.75;
+}
+
+a {
+    -moz-transition: color 0.2s ease, border-bottom-color 0.2s ease;
+    -webkit-transition: color 0.2s ease, border-bottom-color 0.2s ease;
+    -ms-transition: color 0.2s ease, border-bottom-color 0.2s ease;
+    transition: color 0.2s ease, border-bottom-color 0.2s ease;
+    border-bottom: dotted 1px rgba(255, 255, 255, 0.35);
+    color: inherit;
+    text-decoration: none;
 }
 
 a:hover
@@ -208,7 +218,7 @@ form
         -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-        width: calc(100% 0 3em);
+        width: calc(100% + 3em);
         margin: -1.5em 0 2em -1.5em;
     }
 
@@ -285,7 +295,8 @@ input[type="text"], input[type="password"], input[type="email"], input[type="tel
     input[type="tel"]:focus,
     select:focus, textarea:focus
     {
-        box-shadow: none;
+        border-color: #ffffff;
+        box-shadow: 0 0 0 1px #ffffff;
     }
 
 select
@@ -350,17 +361,98 @@ textarea
     opacity: 1.0;
 }
 
-::-ms-input-placeholder
+:-ms-input-placeholder
 {
     color: rgba(255, 255, 255, 0.35) !important;
     opacity: 1.0;
 }
 
+/* Icon */
+
+.icon
+{
+    text-decoration: none;
+    border-bottom: none;
+    position: relative;
+}
+
+    .icon:before
+    {
+        -moz-font-smoothing: grayscale;
+        -webkit-font-smoothing: antialiased;
+        display: inline-block;
+        font-style: normal;
+        font-variant: normal;
+        text-rendering: auto;
+        line-height: 1;
+        text-transform: none !important;
+        font-family: 'ambleregular';
+        font-weight: 400;
+    }
+
+    .icon > .label
+    {
+        display: none;
+    }
+
+    .icon:before
+    {
+        line-height: inherit;
+    }
+
+    .icon.solid:before {
+        font-weight: 900;
+    }
+
+    .icon.brands:before {
+        font-family: 'ambleregular';
+    }
+
+    .icon.major {
+        width: 2.5em;
+        height: 2.5em;
+        display: block;
+        background: #ffffff;
+        border-radius: 100%;
+        color: #312450;
+        text-align: center;
+        line-height: 2.5em;
+        margin: 0 0 1.3em 0;
+    }
+
+        .icon.major:before {
+            font-size: 1.25em;
+        }
+
+            .wrapper.style1 .icon.major:before {
+                color: #5e42a6;
+            }
+
+            .wrapper.style1-alt .icon.major:before {
+                color: #493382;
+            }
+
+            .wrapper.style2 .icon.major:before {
+                color: #5052b5;
+            }
+
+            .wrapper.style2-alt .icon.major:before {
+                color: #3e4094;
+            }
+
+            .wrapper.style3 .icon.major:before {
+                color: #b74e91;
+            }
+
+            .wrapper.style3-alt .icon.major:before {
+                color: #953d75;
+            }
+
 /* Image */
 
     .image
     {
-        border-radius: 0.25;
+        border-radius: 0.25em;
         border: 0;
         display: inline-block;
         position: relative;
@@ -368,13 +460,13 @@ textarea
 
         .image img
         {
-            border-radius: 0.25;
+            border-radius: 0.25em;
             display: block;
         }
 
         .image.left, .image.right
         {
-            max-width: 100%;
+            max-width: 40%;
         }
 
             .image.left img, .image.right img
@@ -392,7 +484,7 @@ textarea
         .image.right
         {
             float: left;
-            margin: 0 1.5em 1em 0;
+            margin: 0 0 1em 1.5em;
             top: 0.25em;
         }
 
@@ -432,7 +524,7 @@ ul.actions
     cursor: default;
     list-style: none;
     margin-left: -1em;
-    padding: 0;
+    padding-left: 0;
 }
 
     ul.actions li
@@ -502,6 +594,31 @@ ul.actions
         {
             width: 100%;
         }
+
+        /* Icons */
+
+	ul.icons {
+		cursor: default;
+		list-style: none;
+		padding-left: 0;
+	}
+
+		ul.icons li {
+			display: inline-block;
+			padding: 0 0.75em 0 0;
+		}
+
+			ul.icons li:last-child {
+				padding-right: 0;
+			}
+
+			ul.icons li > a, ul.icons li > span {
+				border: 0;
+			}
+
+				ul.icons li > a .label, ul.icons li > span .label {
+					display: none;
+				}
 
 
 /* Menu */
@@ -639,7 +756,7 @@ section
                     display: block;
                     height: 100%;
                     left: 0;
-                    opacity: 0;
+                    opacity: 1;
                     position: absolute;
                     top: 0;
                     width: 100%;
@@ -661,7 +778,8 @@ section
                 -ms-justify-content: center;
                 justify-content: center;
                 width: 50em;
-                /*-ms-flex: 1;*/
+                -ms-flex: 1;
+                flex: 1
             }
 
                 .spotlights > section > .content > .image
@@ -700,8 +818,9 @@ section
                 -webkit-transform: translateX(-1em);
                 -ms-transform: translateX(-1em);
                 transform: translateX(-1em);
-                opacity: 0;
+                opacity: 1;
             }
+
 
 /* wrapper */
 
@@ -790,7 +909,7 @@ section
         .wrapper.fade-up.inactive > .inner,
         body.is-preload .wrapper.fade-up > .inner
         {
-            opacity: 0;
+            opacity: 1;
             -moz-transform: translateY(1em);
             -webkit-transform: translateY(1em);
             -ms-transform: translateY(1em);
@@ -813,7 +932,7 @@ section
         .wrapper.fade-down.inactive > .inner,
         body.is-preload .wrapper.fade-down > .inner
         {
-            opacity: 0;
+            opacity: 1;
             -moz-transform: translateY(-1em);
             -webkit-transform: translateY(-1em);
             -ms-transform: translateY(-1em);
@@ -832,7 +951,7 @@ section
         .wrapper.fade.inactive > .inner,
         body.is-preload .wrapper.fade > .inner
         {
-            opacity: 0;
+            opacity: 1;
         }
 
 /* header */
@@ -934,4 +1053,198 @@ section
     }
 
 /* Sidebar */
+
+    #sidebar
+    {
+        padding: 2.5em 2.5em 0.5em 2.5em;
+        background: #312450;
+        cursor: default;
+        height: 100vh;
+        left: 0;
+        overflow-x: hidden;
+        overflow-y: auto;
+        position: fixed;
+        text-align: right;
+        top: 0;
+        width: 18em;
+        z-index: 10000;
+    }
+
+        #sidebar > .inner
+        {
+            display: -moz-flex;
+            display: -webkit-flex;
+            display: -ms-flex;
+            display: flex;
+            -moz-flex-direction: column;
+            -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+            flex-direction: column;
+            -moz-justify-content: center;
+            -webkit-justify-content: center;
+            -ms-justify-content: center;
+            justify-content: center;
+            -moz-transform: translateY(0);
+            -webkit-transform: translateY(0);
+            -ms-transform: translateY(0);
+            transform: translateY(0);
+            -moz-transition: opacity 1s ease;
+            -webkit-transition: opacity 1s ease;
+            -ms-transition: opacity 1s ease;
+            transition: opacity 1s ease;
+            min-height: 100%;
+            opacity: 1;
+            width: 100%;
+            }
+
+                body.is-ie #sidebar > .inner
+                {
+                    height: 100%;
+                }
+
+            #sidebar nav > ul
+            {
+                list-style: 100%;
+                padding: 0;
+            }
+
+                #sidebar nav > ul > li
+                {
+                    -moz-transform: translateY(0);
+                    -webkit-transform: translateY(0);
+                    -ms-transform: translateY(0);
+                    transform: translateY(0);
+                    -moz-transition: opacity 0.15s ease, -moz-transform 0.75s ease;
+                    -webkit-transition: opacity 0.15s ease, -webkit-transform 0.75s ease;
+                    -ms-transition: opacity 0.15s ease, -webkit-transform 0.75s ease;
+                    transition: opacity 0.15s ease, transform 0.75s ease;
+                    margin: 1.5em 0 0 0;
+                    opacity: 1;
+                    padding: 0;
+                    position: relative;
+                }
+
+                    #sidebar nav > ul > li:first-child
+                    {
+                        margin: 0;
+                    }
+
+                    #sidebar nav > ul > li:nth-child(1)
+                    {
+                        -moz-transition-delay: 0.45s;
+                        -webkit-transition-delay: 0.45s;
+                        -ms-transition-delay: 0.45s;
+                        transition-delay: 0.45s;
+                    }
+
+                    #sidebar nav > ul > li:nth-child(2)
+                    {
+                        -moz-transition-delay: 0.65s;
+                        -webkit-transition-delay: 0.65s;
+                        -ms-transition-delay: 0.65s;
+                        transition-delay: 0.65s;
+                    }
+
+                    #sidebar nav > ul > li:nth-child(3)
+                    {
+                        -moz-transition-delay: 0.85s;
+                        -webkit-transition-delay: 0.85s;
+                        -ms-transition-delay: 0.85s;
+                        transition-delay: 0.85s;
+                    }
+
+            #sidebar nav a
+            {
+                -moz-transition: color 0.2s ease;
+                -webkit-transition: color 0.2s ease;
+                -ms-transition: color 0.2s ease;
+                transition: color 0.2s ease;
+                border: 0;
+                color: rgba(255, 255, 255, 0.35);
+                display: block;
+                font-size: 0.6em;
+                font-weight: bold;
+                letter-spacing: 0.25em;
+                line-height: 1.75;
+                outline: 0;
+                padding: 1.35em 0;
+                position: relative;
+                text-decoration: none;
+                text-transform: uppercase;
+            }
+
+                #sidebar nav a:before, #sidebar nav a:after
+                {
+                    border-radius: 0.2em;
+                    bottom: 0;
+                    content: '';
+                    height: 0.2em;
+                    position: absolute;
+                    right: 0;
+                    width: 100%;
+                }
+
+                #sidebar nav a:before
+                {
+                    background: #3c2c62;
+                }
+
+                #sidebar nav a:after
+                {
+                    background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
+                    background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
+                    background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
+                    background-image: linear-gradient(to right, #5e42a6, #b74e91);
+                    -moz-transition: max-width 0.2s ease;
+                    -webkit-transition: max-width 0.2s ease;
+                    -ms-transition: max-width 0.2s ease;
+                    transition: max-width 0.2s ease;
+                }
+
+                #sidebar nav a:hover
+                {
+                    color: rgba(255, 255, 255, 0.55);
+                }
+
+                #sidebar nav a.active
+                {
+                    color: #ffffff;
+                }
+
+                #sidebar nav a.active:after
+                {
+                    max-width: 100%;
+                }
+
+            body.is-preload #sidebar > .inner
+            {
+                opacity: 1;
+            }
+
+            body.is-preload #sidebar nav ul li
+            {
+                -moz-transform: translateY(2em);
+                -webkit-transform: translateY(2em);
+                -ms-transform: translateY(2em);
+                transform: translateY(2em);
+                opacity: 1;
+            }
+ 
+
+/* Intro */
+
+#intro
+{
+    background-attachment: fixed;
+    background-image: url("images/intro.svg");
+    background-position: top right;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+    #intro p
+    {
+        font-size: 1.25em;
+    }
+
 
